<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudyActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/NameList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="Basic"
                android:textSize="20sp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/CheckCountWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check"
                android:gravity="end"
                android:textSize="20sp"
                android:paddingEnd="30dp"
                android:paddingTop="10dp"
                android:layout_weight="5"/>
        </LinearLayout>
        <TextView
            android:id="@+id/textQuestion"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/QuestionWord"
            android:textSize="32sp"/>
        <TextView
            android:id="@+id/textAnswer"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/AnswerWord"
            android:textSize="32sp"/>
        <TextView
            android:id="@+id/checkAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/ChceckAnswer"
            android:layout_marginTop="40dp"
            android:labelFor="@id/AddAnswer"/>
        <EditText
            android:id="@+id/AddAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:inputType="text"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/buttonExit"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginEnd="60dp"
                android:text="@string/ButtonExit"/>
            <Button
                android:id="@+id/buttonAnswer"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:text="@string/ButtonAnswer"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>